# Enc2DB

./: CMakeLists.txt  Makefile  ORE执行计划.sql  Problems.md  README.md  config.json  createudf.sql  setup.sh  switch.sh  switchtoO2.sh  test.cpp  test.sql  问题.md
cmake/: FindGMP.cmake  FindLOG4CPP.cmake
include/: encryptsql.h
include/crypto/: crypto.h  openssl.h
include/encryptsql/: combine.h  fieldmap.h  node2str.h  parser.h  utils.h
include/json/: json-forwards.h  json.h
pg_include/catalog/: schemapg.h
replaced_file/: fe-exec.c.9.2.4
src/MessageHandler/: MessageHandler.cpp  MessageHandler.h
src/Networking/: Client.cpp  Client.h  NetworkManagerClient.cpp  Server.cpp  Session.h
src/Server/: CMakeLists.txt
src/Server/Enclave/: Enclave.cpp
src/crypto/: crypto_utils.cpp
src/crypto/cryptolib/: CMakeLists.txt
src/crypto/cryptolib/libudf/: App.cpp  App.h  ArraySymCipher.cpp  CMakeLists.txt  CryptoScheme.cpp  EPCMonitor.h  Interface.cpp  InterfaceWarpper.cc  InterfaceWarpper.h  Interface_c.c  ORE_STR22STRUCT.cpp  SymAHE.cpp  SymMHE.cpp  SymPHE.cpp  Symcipher.cpp  encryption.cpp  errmsgBridge.cpp  errmsgBridge.h  ore_crypto.c  str22struct.cpp  t.cpp  udf_compare.c  udf_sum.c
src/crypto/cryptolib/libudf/Enclave/: CMakeLists.txt  Enclave.config.xml  ErrorSupport.cpp  ErrorSupport.h  ecalls.cpp
src/crypto/cryptolib/libudf/Enclave/aes/: taes.c  taes.hpp
src/crypto/cryptolib/libudf/Enclave/edls/: Enclave.edl
src/crypto/cryptolib/libudf/decider/: routineDecider.cpp  routineDecider.h  statusReport.h  udfDispatch.cpp  udfDispatch.h
src/crypto/cryptolib/libudf/tests/: CMakeLists.txt  EnclaveTest.cpp  UDFTest.cpp
src/crypto/cryptolib/symmetria/: ArraySymCipher.cpp  ArraySymCipher.h  CryptoScheme.cpp  CryptoScheme.h  Interface.h  Interface_c.c  KeyManager.cpp  KeyManager.h  MathUtils.cpp  MathUtils.h  ORE_STR22STRUCT.cpp  ORE_STR22STRUCT.h  SAHE_key.txt  SMHE_key.txt  Singleton.h  SymAHE.cpp~merged  SymAHE.h  SymMHE.cpp  SymMHE.h  SymPHE.cpp  SymPHE.h  Symcipher.cpp  Symcipher.h  aes.h  different.h  elogDefination.h  encryption.h  exception.hpp  ore_blk.c~merged  ore_blk.h  ore_crypto.c  ore_crypto.h  str22struct.cpp  str22struct.h  t.h
src/decryptres/: decryptres.cpp
src/encryptsql/: decryptres.cpp  encryptstmt.cpp  fieldmap.cpp  main.cpp  node2str.cpp  node2str.cpp_unfinished
src/encryptsql/parser/lexer/: gram.c  scan.cc  scansup.c
src/encryptsql/parser/lostpart/: adt_name.c  encnames.c  mbutils.c  others.c  stringinfo.c  syscache.c  wchar.c
src/encryptsql/parser/mmgr/: aset.c  mcxt.c
src/encryptsql/parser/nodes/: copyfuncs.c  equalfuncs.c  list.c  makefuncs.c  nodeFuncs.c  readfuncs.c
src/protobuf/: RAMessages.proto
src/utils/: EnclaveManager.cpp  EnclaveManager.h  KeyManager.cpp  KeyManager.h  LRUCache.hpp  LogBase.cpp  LogBase.h  TimeCounter.cpp  TimeCounter.h  Timer.cpp  Timer.h  Timestamp.cpp  Timestamp.h  UtilityFunctions.cpp  UtilityFunctions.h  base64.c  config.cpp  config.h  cryptoCaller.cpp  cryptoUtils.cpp  opensslUtils.cpp  serializer.cpp  serializer.h  settings.h  utils.cpp  utils.h
tests/: CMakeLists.txt  sqltest.cpp
